// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create version branch comment pr 1`] = `
"- The \`devDependency\` [@finnpauls/dep2](https://github.com/finnpauls/dep2) was updated from \`1.0.0\` to \`2.0.0\`.

[Update to this version instead 🚀](https://github.com/finnp/test2/compare/master...finnp:greenkeeper%2F%40finnpauls%2Fdep2-2.0.0)"
`;

exports[`create version branch for dependencies from monorepos new pull request 1`] = `
"
## There have been updates to the *colors* monorepo: 

- The \`devDependency\` [colors](https://github.com/orgname/colors) was updated from \`1.0.0\` to \`2.0.0\`.
- The \`dependency\` [colors-blue](https://www.npmjs.com/package/colors-blue) was updated from \`1.0.0\` to \`2.0.0\`.

These versions are **not covered** by your **current version range**.

If you don’t accept this pull request, your project will work just like it did before. However, you might be missing out on a bunch of new features, fixes and/or performance improvements from the dependency update.

This monorepo update includes releases of one or more dependencies which all belong to the [colors group definition](https://github.com/greenkeeperio/monorepo-definitions).

---

[Find out more about this release](https://github.com/orgname/colors).

<details>
  <summary>FAQ and help</summary>

  There is a collection of [frequently asked questions](https://greenkeeper.io/faq.html). If those don’t help, you can always [ask the humans behind Greenkeeper](https://github.com/greenkeeperio/greenkeeper/issues/new).
</details>

---


Your [Greenkeeper](https://greenkeeper.io) bot :palm_tree:

"
`;

exports[`create version branch for dependencies from monorepos new pull request with different versions, skipping one unchanged package 1`] = `
"
## There have been updates to the *numbers* monorepo: 

- The \`devDependency\` [numbers](https://www.npmjs.com/package/numbers) was updated from \`2.1.0\` to \`2.2.0\`.
- The \`dependency\` [numbers-four](https://www.npmjs.com/package/numbers-four) was updated from \`1.2.0\` to \`1.3.0\`.

These versions are **not covered** by your **current version range**.

If you don’t accept this pull request, your project will work just like it did before. However, you might be missing out on a bunch of new features, fixes and/or performance improvements from the dependency update.

This monorepo update includes releases of one or more dependencies which all belong to the [numbers group definition](https://github.com/greenkeeperio/monorepo-definitions).

---

[Find out more about this release]().

<details>
  <summary>FAQ and help</summary>

  There is a collection of [frequently asked questions](https://greenkeeper.io/faq.html). If those don’t help, you can always [ask the humans behind Greenkeeper](https://github.com/greenkeeperio/greenkeeper/issues/new).
</details>

---


Your [Greenkeeper](https://greenkeeper.io) bot :palm_tree:

"
`;

exports[`create version branch for dependencies from monorepos new pull request with group of dependencies 1`] = `
"
## There have been updates to the *flowers* monorepo: 

- The \`devDependency\` [flowers](https://github.com/orgname/flowers) was updated from \`1.0.0\` to \`2.0.0\`.
- The \`dependency\` [flowers-blue](https://github.com/orgname/flowers-blue) was updated from \`1.0.0\` to \`2.0.0\`.
- The \`dependency\` [flowers-red](https://github.com/orgname/flowers-red) was updated from \`1.0.0\` to \`2.0.0\`.
- The \`dependency\` [flowers-green](https://github.com/orgname/flowers-green) was updated from \`1.0.0\` to \`2.0.0\`.

These versions are **not covered** by your **current version range**.

If you don’t accept this pull request, your project will work just like it did before. However, you might be missing out on a bunch of new features, fixes and/or performance improvements from the dependency update.

This monorepo update includes releases of one or more dependencies which all belong to the [flowers group definition](https://github.com/greenkeeperio/monorepo-definitions).

---

[Find out more about this release](https://github.com/orgname/flowers).

<details>
  <summary>FAQ and help</summary>

  There is a collection of [frequently asked questions](https://greenkeeper.io/faq.html). If those don’t help, you can always [ask the humans behind Greenkeeper](https://github.com/greenkeeperio/greenkeeper/issues/new).
</details>

---


Your [Greenkeeper](https://greenkeeper.io) bot :palm_tree:

"
`;

exports[`create version branch for dependencies from monorepos new pull request with ignored dependency 1`] = `
"
## There have been updates to the *colors* monorepo: 

- The \`devDependency\` [colors](https://github.com/orgname/colors) was updated from \`1.0.0\` to \`2.0.0\`.

These versions are **not covered** by your **current version range**.

If you don’t accept this pull request, your project will work just like it did before. However, you might be missing out on a bunch of new features, fixes and/or performance improvements from the dependency update.

This monorepo update includes releases of one or more dependencies which all belong to the [colors group definition](https://github.com/greenkeeperio/monorepo-definitions).

---

[Find out more about this release](https://github.com/orgname/colors).

<details>
  <summary>FAQ and help</summary>

  There is a collection of [frequently asked questions](https://greenkeeper.io/faq.html). If those don’t help, you can always [ask the humans behind Greenkeeper](https://github.com/greenkeeperio/greenkeeper/issues/new).
</details>

---


Your [Greenkeeper](https://greenkeeper.io) bot :palm_tree:

"
`;

exports[`create version branch lockfile: runs if in range, has package-lock.json 1`] = `"{\\"devDependencies\\":{\\"jest\\":\\"1.2.0\\"}}"`;

exports[`create version branch lockfile: runs if in range, has package-lock.json 2`] = `
"
## There have been updates to the *jest* monorepo: 

- The \`devDependency\` [jest](https://github.com/jest/jest) was updated from \`1.1.1\` to \`1.2.0\`.

These versions are **not covered** by your **current version range**.

If you don’t accept this pull request, your project will work just like it did before. However, you might be missing out on a bunch of new features, fixes and/or performance improvements from the dependency update.

This monorepo update includes releases of one or more dependencies which all belong to the [jest group definition](https://github.com/greenkeeperio/monorepo-definitions).

---

[Find out more about this release](https://github.com/jest/jest).

<details>
  <summary>FAQ and help</summary>

  There is a collection of [frequently asked questions](https://greenkeeper.io/faq.html). If those don’t help, you can always [ask the humans behind Greenkeeper](https://github.com/greenkeeperio/greenkeeper/issues/new).
</details>

---


Your [Greenkeeper](https://greenkeeper.io) bot :palm_tree:

"
`;

exports[`create version branch lockfile: runs if in range, package-lock.json has not changed 1`] = `"{\\"devDependencies\\":{\\"best\\":\\"1.2.0\\"}}"`;

exports[`create version branch lockfile: runs if in range, package-lock.json has not changed 2`] = `
"
## The devDependency [best](https://github.com/best/best) was updated from \`1.1.1\` to \`1.2.0\`.
This version is **not covered** by your **current version range**.

If you don’t accept this pull request, your project will work just like it did before. However, you might be missing out on a bunch of new features, fixes and/or performance improvements from the dependency update.

---

[Find out more about this release](https://github.com/best/best).

<details>
  <summary>FAQ and help</summary>

  There is a collection of [frequently asked questions](https://greenkeeper.io/faq.html). If those don’t help, you can always [ask the humans behind Greenkeeper](https://github.com/greenkeeperio/greenkeeper/issues/new).
</details>

---


Your [Greenkeeper](https://greenkeeper.io) bot :palm_tree:

"
`;

exports[`create version branch new pull request 1`] = `
"
## The devDependency [@finnpauls/dep](https://github.com/finnpauls/dep) was updated from \`1.0.0\` to \`2.0.0\`.
This version is **not covered** by your **current version range**.

If you don’t accept this pull request, your project will work just like it did before. However, you might be missing out on a bunch of new features, fixes and/or performance improvements from the dependency update.

---

[Find out more about this release](https://github.com/finnpauls/dep).

<details>
  <summary>FAQ and help</summary>

  There is a collection of [frequently asked questions](https://greenkeeper.io/faq.html). If those don’t help, you can always [ask the humans behind Greenkeeper](https://github.com/greenkeeperio/greenkeeper/issues/new).
</details>

---


Your [Greenkeeper](https://greenkeeper.io) bot :palm_tree:

"
`;

exports[`create version branch new pull request private repo 1`] = `
"
## The devDependency [@finnpauls/dep](https://github.com/finnpauls/dep) was updated from \`1.0.0\` to \`2.0.0\`.
This version is **not covered** by your **current version range**.

If you don’t accept this pull request, your project will work just like it did before. However, you might be missing out on a bunch of new features, fixes and/or performance improvements from the dependency update.

---

[Find out more about this release](https://github.com/finnpauls/dep).

<details>
  <summary>FAQ and help</summary>

  There is a collection of [frequently asked questions](https://greenkeeper.io/faq.html). If those don’t help, you can always [ask the humans behind Greenkeeper](https://github.com/greenkeeperio/greenkeeper/issues/new).
</details>

---


Your [Greenkeeper](https://greenkeeper.io) bot :palm_tree:

"
`;

exports[`create version branch new pull request private repo within GKE 1`] = `
"
## The devDependency [@finnpauls/dep](https://github.com/finnpauls/dep) was updated from \`1.0.0\` to \`2.0.0\`.
This version is **not covered** by your **current version range**.

If you don’t accept this pull request, your project will work just like it did before. However, you might be missing out on a bunch of new features, fixes and/or performance improvements from the dependency update.

---

[Find out more about this release](https://github.com/finnpauls/dep).

<details>
  <summary>FAQ and help</summary>

  There is a collection of [frequently asked questions](https://greenkeeper.io/faq.html). If those don’t help, you can always [ask the humans behind Greenkeeper](https://github.com/greenkeeperio/greenkeeper/issues/new).
</details>

---


Your [Greenkeeper](https://greenkeeper.io) bot :palm_tree:

"
`;
